// Copyright 2021 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.ui;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/ui";

// ChromeUIService performs the UI operations.
service ChromeUIService {
    // EnsureLoginScreen restarts ui job to ensure starting from logout state, i.e. at login.
    rpc EnsureLoginScreen (google.protobuf.Empty) returns (google.protobuf.Empty) {}

    // DumpUITree dumps the UI tree to the context directory of the test.
    rpc DumpUITree (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
